[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/card/card-front.png" type="Texture" id=1]
[ext_resource path="res://scenes/Card.gd" type="Script" id=2]
[ext_resource path="res://assets/Andada-Bold.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Basic-San-Serif.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72, 105.5 )

[node name="Card" type="Area2D"]
script = ExtResource( 2 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.471154, 0.471154 )
texture = ExtResource( 1 )

[node name="CharacterLabel" type="Label" parent="."]
margin_left = -69.0
margin_top = 25.0
margin_right = 69.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0.133333, 0.109804, 0.109804, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="DescriptionLabel" type="Label" parent="."]
anchor_left = 0.376
anchor_top = 0.438
anchor_right = 0.376
anchor_bottom = 0.438
margin_left = -55.5
margin_top = 47.9519
margin_right = 56.5
margin_bottom = 88.9519
custom_colors/font_color = Color( 0.133333, 0.109804, 0.109804, 1 )
custom_fonts/font = SubResource( 3 )
autowrap = true

[node name="AbilityLabel" type="Label" parent="."]
margin_left = -70.0
margin_top = -83.0
margin_right = 71.0
margin_bottom = -66.0
custom_colors/font_color = Color( 0.133333, 0.109804, 0.109804, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="CardCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
